plugins {
    id 'com.enonic.defaults' version '2.1.6'
    id 'com.enonic.xp.app'
    id 'com.github.node-gradle.node' version '7.1.0'
    id 'maven-publish'
    id 'jacoco'
}

apply from: "$rootDir/gradle/env.gradle"
apply from: "$rootDir/gradle/node.gradle"

def defaultEncoding = 'UTF-8'

compileJava {
	options.encoding = defaultEncoding
}

compileTestJava {
	options.encoding = defaultEncoding
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

dependencies {
    implementation xplibs.api.core
    implementation xplibs.api.script
    implementation xplibs.api.portal
    implementation libs.jackson.databind

    include libs.graphql.java
    include libs.graphql.java.extended.scalars

    include xplibs.admin
    include xplibs.portal
    include xplibs.event
    include xplibs.app
    include xplibs.context
    include libs.lib.mustache
    include libs.lib.static
    include libs.lib.router
    include libs.lib.cors

    testImplementation(platform(libs.junit.bom))
    testImplementation(platform(libs.mockito.bom))
    testImplementation libs.junit.jupiter
    testRuntimeOnly libs.junit.platform.launcher
    testImplementation libs.mockito.junit.jupiter
    testImplementation "com.enonic.xp:testing:${xpVersion}"
}

repositories {
    mavenLocal()
    mavenCentral()
    xp.enonicRepo( 'dev' )
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

test {
    useJUnitPlatform()
}

node {
    version = '24.15.0'
    download = true
}

tasks.register('lint', NpmTask) {
    group 'verification'
    dependsOn( npmInstall )
    args = ['run', 'lint:quiet']
    inputs.files fileTree( dir: 'src', include: '**/*.ts' )
}

check.dependsOn( lint, jacocoTestReport )

tasks.register('webpack', NpmTask) {
    dependsOn( npmInstall )
    environment = ['NODE_ENV': nodeEnvironment()]
    description = 'Build UI resources (ts, css, etc).'
    args = ['run', 'build']
    inputs.dir "src/main"
    inputs.file 'webpack.config.js'
    outputs.dir "$buildDir/resources/main"
}

tasks.register('assembleTypes', Copy) {
    from 'types'
    into layout.buildDirectory.dir('types')
    exclude 'node_modules'
    exclude 'test-d'
    exclude '.gitignore'
    exclude 'package-lock.json'
    filesMatching('package.json') {
        filter { line ->
            line.replaceAll(/"version":\s*"[^"]*"/, "\"version\": \"${project.version}\"")
        }
    }
}

publish.dependsOn assembleTypes

jar {
    exclude 'assets/**/*.tsx'
    exclude 'assets/**/*.less'
    exclude 'assets/styles/graphiql.min.css'
    exclude 'assets/**/styles/*.js'

    if ( isProd() )
    {
        exclude 'assets/**/*.map'
    }

    outputs.dir "$buildDir/resources/main"

    dependsOn( webpack )
}

javadoc.dependsOn( webpack, jar )
compileTestJava.dependsOn( webpack, jar )
